package AnalizadorSintactico;

import java.util.List;


public class Parser {
    /**
     * Método para analizar el código fuente de un método.
        * @param sourceCode el código fuente del método.
        * @return true si el código fuente es válido, false en caso contrario.
        */
    public boolean parse(String sourceCode) {
        // Analiza el código fuente del método count
        // La implementación de este método dependerá de cómo quieras analizar el código fuente
        return true;
    }
}
